# machinekit-NG

./: CMakeLists.txt  README.md
cmake/modules/: CreateDebs.cmake  Dependencies.cmake  Macros.cmake  Options.cmake  RpathHack.cmake
debian/: README.debian  changelog  configure  control.in  copyright  machinekit-hal.postinst  machinekit-hal.sharedmimeinfo  rules.in
include/: container.h  halpb.hh  pb-linuxcnc.h  pb-machinekit.h
nosetests/: test_ring.py  test_ringdemo.py  test_rtapi.py  unittest_icomp.py  unittest_instbindings.py  unittest_or2.py
scripts/: CMakeLists.txt  get_symbols  halrun.in  machinekit.ini.in  python_package_helper  realtime.in  rip-environment.in  rtapi.ini.in  set_env.in
src/: .gitignore  CMakeLists.txt  Makefile.inc.in  Makefile.modinc.in  config.h.in
src/emc/: CMakeLists.txt
src/emc/kinematics/: CMakeLists.txt
src/emc/motion/: CMakeLists.txt
src/emc/nml_intf/: CMakeLists.txt
src/emc/tp/: CMakeLists.txt
src/hal/: CMakeLists.txt
src/hal/classicladder/: CMakeLists.txt
src/hal/components/: CMakeLists.txt
src/hal/cython/: CMakeLists.txt  setup.py.in
src/hal/cython/machinekit/: CMakeLists.txt
src/hal/drivers/: CMakeLists.txt  mesa_7i65.comp  mesa_uart.comp  pluto_servo.comp  pluto_step.comp
src/hal/drivers/hal_pru_generic/: CMakeLists.txt
src/hal/drivers/mesa-hostmot2/: CMakeLists.txt  abs_encoder.c  dpll.c  encoder.c  hm2_7i43.c  hm2_7i90.c  hm2_pci.c  hm2_test.c  ioport.c  led.c  pins.c  pwmgen.c  raw.c  resolver.c  stepgen.c  tp_pwmgen.c  tram.c  watchdog.c
src/hal/i_components/: CMakeLists.txt
src/hal/lib/: CMakeLists.txt  hal_lib.c  hal_rcomp.c  setup.py.in
src/hal/support/: CMakeLists.txt
src/hal/support/pru/: CMakeLists.txt
src/hal/user_comps/: CMakeLists.txt
src/hal/user_comps/mb2hal/: CMakeLists.txt
src/hal/user_comps/vfdb_vfd/: CMakeLists.txt
src/hal/user_comps/vfs11_vfd/: CMakeLists.txt
src/hal/userfunct-example/: CMakeLists.txt
src/hal/utils/: CMakeLists.txt  comp.g  halcmd.c  halcmd_commands.c  instcomp.g
src/hal/vtable-example/: CMakeLists.txt
src/libnml/inifile/: CMakeLists.txt
src/libnml/posemath/: CMakeLists.txt
src/machinetalk/: CMakeLists.txt
src/machinetalk/lib/: CMakeLists.txt
src/machinetalk/msgcomponents/: CMakeLists.txt  pbmsgs.h  pbring.c
src/machinetalk/nanopb/: CMakeLists.txt
src/machinetalk/proto/: CMakeLists.txt
src/rtapi/: CMakeLists.txt  chkenv.c  flavor.c  rtapi_app.cc  rtapi_compat.c  rtapi_main.c  rtapi_module.c  rtapi_msgd.cc  rtapi_shmem.c  rtapi_support.c  ulapi_autoload.c  ulapi_main.c
src/rtapi/rtapi_math/: CMakeLists.txt
src/rtapi/shmdrv/: CMakeLists.txt  shmdrvapi.c
