add_subdirectory(lib)
add_subdirectory(components)
add_subdirectory(utils)
add_subdirectory(drivers)
add_subdirectory(i_components)
add_subdirectory(classicladder)
add_subdirectory(vtable-example)
add_subdirectory(support)
add_subdirectory(cython)
add_subdirectory(user_comps)

_to_rtlib(ufdemo userfunct-example/ufdemo.c)
_to_rtlib(icomp icomp-example/icomp.c)
